# Didi2

./: .gitignore  CheckStyles.xml  MethodCanary.js  README.md  build.gradle  local.properties  settings.gradle
aotosize/: build.gradle
aotosize/src/main/: AndroidManifest.xml
aotosize/src/main/res/drawable/: selector_actionbar_item.xml
aotosize/src/main/res/layout/: activity_custom_adapt.xml  activity_main.xml  activity_main2.xml  activity_seting.xml  underline.xml
aotosize/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/: CMakeLists.txt  build.gradle  new 1.txt  proguard-rules.pro  tinkerpatch.gradle
app/libs/: SafeCapability.aar  crypto.aar
app/release/: output.json
app/release/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Camaro.html  ES6.html  JavaAndJavaScriptCall.html  baidu.cer  config.json  didi2.cer  mdm_serverTest.cer  readPhoto.html  register.html  security.keystore  test.json  tomcat.cer  xposed_init
app/src/main/jni/EasyProtector/: CMakeLists.txt
app/src/main/jni/URL/: UrlMonitor.cpp  UrlMonitor.h
app/src/main/jni/secure_detect/: CMakeLists.txt  debugDetect.cpp  elfParser.cpp  elfParser.h  injectDetect.cpp  memmap.cpp  nettools.cpp  nettools.h  pltHookDetect.cpp  system.cpp  system.h  uninstall.cpp  uninstall.h
app/src/main/jni/xcrash/: CMakeLists.txt
app/src/main/jni/xcrash/libxcrash_dumper/jni/lzma/: 7z.h  CMakeLists.txt  LzmaLib.h  Xz.h  XzDec.c
gradle/wrapper/: gradle-wrapper.properties
huaweimdm/: build.gradle
huaweimdm/src/main/: AndroidManifest.xml
keystore/: key.jks
(+786 files in other folders)
